--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -14,6 +14,10 @@ admin_password:
 # Generate one with a bash command like: openssl rand -hex 128
 secret_token: 'xxxxxx'
 
+# New app deployments will need a Google Maps API key to correctly display 
+# the OFN Map
+google_maps_api_key:
+
 
 # Set this if using New Relic
 newrelic_license_key:
