Add sudoers privileges to unicorn user

--- a/roles/unicorn_user/tasks/main.yml
+++ b/roles/unicorn_user/tasks/main.yml
@@ -33,3 +33,10 @@
     owner: "{{ unicorn_user }}"
     group: "{{ unicorn_user }}"
     mode: 0644
+
+- name: Create sudoers configuration for unicorn user
+  become: true
+  template:
+    src: sudoers.j2
+    dest: "/etc/sudoers.d/{{ unicorn_user }}"
+    mode: 0440
