Add Ravi as sys admin for US public instance

--- a/inventory/group_vars/us.yml
+++ b/inventory/group_vars/us.yml
@@ -18,6 +18,7 @@ developer_email: ofn-usa@openfoodnetwork.net
 users_sysadmin:
   - enricostn
   - dani
+  - ravi
 
 # Disabled for now
 s3_backups_bucket: none
