enable HTTP/2 in nginx config

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -131,8 +131,8 @@ nginx_sites:
 
   ofn_443:
     - |
-      listen 443 ssl;
-      listen [::]:443 ssl;
+      listen 443 ssl http2;
+      listen [::]:443 ssl http2;
       server_name {{ domain }};
       root {{ app_root }}/public;
 
