--- a/inventory/host_vars/www.openfoodfrance.org/config.yml
+++ b/inventory/host_vars/www.openfoodfrance.org/config.yml
@@ -3,4 +3,4 @@
 domain: www.openfoodfrance.org
 rails_env: production
 
-admin_email: info@openfoodfrance.org
+admin_email: admin@openfoodfrance.org
