Added AVAILABLE_LOCALES env var in ofn-install

--- a/inventory/group_vars/_example.yml
+++ b/inventory/group_vars/_example.yml
@@ -4,7 +4,8 @@
 checkout_zone:
 country_code:
 currency:
-locale:
+locale: en
+available_locales: en
 language:
 language_packages:
   - language-pack-en-base
