--- a/inventory/group_vars/es.yml
+++ b/inventory/group_vars/es.yml
@@ -4,6 +4,7 @@ checkout_zone: Europe
 country_code: ES
 currency: EUR
 locale: es
+available_locales: es,ca,pt
 language: es_ES.UTF-8
 language_packages:
   - language-pack-es-base
