Better example of available_locales

--- a/inventory/group_vars/_example.yml
+++ b/inventory/group_vars/_example.yml
@@ -5,7 +5,7 @@ checkout_zone:
 country_code:
 currency:
 locale: en
-available_locales: en
+available_locales: en,es
 language:
 language_packages:
   - language-pack-en-base
