--- a/bin/requirements.yml
+++ b/bin/requirements.yml
@@ -1,4 +1,3 @@
-
 # from galaxy
 - src: geerlingguy.security
   version: 1.5.0
@@ -9,5 +8,5 @@
 - src: jdauphant.nginx
   version: v2.7.4
 
-- src: geerlingguy.certbot
-  version: 1.0.1
+- src: coopdevs.certbot_nginx
+  version: 0.0.1
