--- a/inventory/host_vars/staging.katuma.org/config.yml
+++ b/inventory/host_vars/staging.katuma.org/config.yml
@@ -2,3 +2,8 @@
 domain: staging.katuma.org
 rails_env: staging
 admin_email: info@coopdevs.org
+
+mail_host: smtp.mandrillapp.com
+mail_port: 587
+
+smtp_username: Coopdevs
