--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -23,3 +23,6 @@ newrelic_license_key:
 
 # Skylight's API key. This enables performance instrumentation through Skylight. See https://github.com/openfoodfoundation/openfoodnetwork/pull/2070 for details.
 skylight_authentication: xxx
+
+# Mail settings
+smtp_password:
