Use python2.7 binary as ansible interpeter

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -176,8 +176,5 @@ nginx_configs:
   upstream:
     - upstream unicorn { server unix:{{ unicorn_sock }} fail_timeout=0; }
 
-# letsencrypt_server: https://acme-staging.api.letsencrypt.org/directory
-
-
-
-
+# Use python2.7 interpeter
+ansible_python_interpreter: '/usr/bin/python2.7'
