Better doc and cleanup

--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -14,8 +14,7 @@ admin_password:
 # Generate one with a bash command like: openssl rand -hex 128
 secret_token: 'xxxxxx'
 
-# New app deployments will need a Google Maps API key to correctly display 
-# the OFN Map
+# Create a Google Maps API key and enable Javascript and Places libraries
 google_maps_api_key:
 
 
