--- a/inventory/group_vars/de.yml
+++ b/inventory/group_vars/de.yml
@@ -4,6 +4,7 @@ checkout_zone: Europe
 country_code: DE
 currency: EUR
 locale: de_DE
+available_locales: de_DE,en
 language: de_DE.UTF-8
 language_packages:
   - language-pack-de-base
