Differentiate MAIL_DOMAIN from plain DOMAIN
This way we can have katuma.org as the mail domain and
staging.katuma.org as web domain.

--- a/inventory/host_vars/_example.com/config.yml
+++ b/inventory/host_vars/_example.com/config.yml
@@ -5,6 +5,7 @@ rails_env: production
 
 admin_email: admin@example.com
 
+mail_domain: example.com
 mail_host: smtp.mandrillapp.com
 mail_port: 587
 
