--- a/inventory/host_vars/alpha.katuma.org/config.yml
+++ b/inventory/host_vars/alpha.katuma.org/config.yml
@@ -4,6 +4,7 @@ rails_env: production
 
 admin_email: info@coopdevs.org
 
+mail_domain: katuma.org
 mail_host: smtp.mandrillapp.com
 mail_port: 587
 
