--- a/inventory/host_vars/staging.katuma.org/config.yml
+++ b/inventory/host_vars/staging.katuma.org/config.yml
@@ -3,6 +3,7 @@ domain: staging.katuma.org
 rails_env: staging
 admin_email: info@coopdevs.org
 
+mail_domain: katuma.org
 mail_host: smtp.mandrillapp.com
 mail_port: 587
 
