--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -20,3 +20,6 @@ google_maps_api_key:
 
 # Set this if using New Relic
 newrelic_license_key:
+
+# Skylight's API key. This enables performance instrumentation through Skylight. See https://github.com/openfoodfoundation/openfoodnetwork/pull/2070 for details.
+skylight_authentication: xxx
