--- a/roles/deploy/handlers/main.yml
+++ b/roles/deploy/handlers/main.yml
@@ -14,7 +14,7 @@
 
 
 - name: restart delayed job workers
-  command:  bash -lc "./script/delayed_job -i 0 stop RAILS_ENV={{ rails_env }}" chdir="{{ current_path }}"
+  command:  bash -lc "./script/delayed_job -i 0 restart RAILS_ENV={{ rails_env }}" chdir="{{ current_path }}"
 
 
 - name: restart unicorn
