--- a/inventory/group_vars/fr.yml
+++ b/inventory/group_vars/fr.yml
@@ -5,12 +5,16 @@ checkout_zone: Europe
 country_code: FR
 currency: EUR
 locale: fr
-language: fr.UTF-8
+available_locales: fr
+language: fr_FR.UTF-8
 language_packages:
   - language-pack-fr-base
 l10n_repo: https://github.com/openfoodfoundation/l10n_fr.git
 timezone: Paris
 
+# Used for the LetsEncrypt email setting
+developer_email: admin@openfoodfrance.org
 
-developer_email: info@openfoodfrance.fr
-
+# Users listed here will have their key from /files/keys added to the unicorn_user
+users_sysadmin:
+  - paco
