Fix wrong NewRelic license key check

--- a/roles/deploy/defaults/main.yml
+++ b/roles/deploy/defaults/main.yml
@@ -2,8 +2,7 @@
 rollback_path: "{{ app_path }}/rollback"
 rollback_sql_path: "{{ app_path }}/rollback.sql.gz"
 
-
-newrelic_key: none
+newrelic_license_key: none
 
 bugsnag_key: none
 
