--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -86,7 +86,7 @@
     force=yes
     owner={{ unicorn_user }}
     mode=0775
-  when: newrelic_key != "none"
+  when: newrelic_license_key != "none"
   tags: symlink
 
 - name: bundle install app dependencies
