Update crontab via whenever on deployment

--- a/roles/deploy/handlers/main.yml
+++ b/roles/deploy/handlers/main.yml
@@ -50,3 +50,8 @@
     state: restarted
   become: yes
   become_user: root
+
+- name: update whenever
+  command: bash -lc "bundle exec whenever --update-crontab RAILS_ENV={{ rails_env }}"
+  args:
+    chdir: "{{ current_path }}"
