Missing environment variables for Stripe and S3

--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -17,6 +17,20 @@ secret_token: 'xxxxxx'
 # Create a Google Maps API key and enable Javascript and Places libraries
 google_maps_api_key:
 
+# Amazon S3 backups with db2fog
+s3_backups_bucket:
+s3_access_key:
+s3_secret:
+
+# Stripe Connect API keys
+# Find these under 'API keys' and 'Connect' in your Stripe account dashboard -> Account Settings
+# Under 'Connect', the Redirect URI should be set to https://YOUR_SERVER_URL/stripe/callbacks (e.g. https://openfoodnetwork.org.uk/stripe/callbacks)
+# Under 'Webhooks', you should set up a Connect endpoint pointing to https://YOUR_SERVER_URL/stripe/webhooks e.g. (https://openfoodnetwork.org.uk/stripe/webhooks)
+# Different keys can be made for testing or live environments
+stripe_client_id: # ca_xxxx
+stripe_instance_secret_key: # sk_xxxx
+stripe_instance_publishable_key: # pk_xxxx
+stripe_endpoint_secret: # whsec_xxxx
 
 # Set this if using New Relic
 newrelic_license_key:
