--- a/roles/app/tasks/main.yml
+++ b/roles/app/tasks/main.yml
@@ -57,7 +57,7 @@
   tags:
     - app_templates
     - db2fog
-  when: s3_backups_bucket != "none"
+  when: s3_backups_bucket != ""
 
 - name: get l10n repo
   git:
