Added note to clarify S3 backup vars are optional

--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -17,7 +17,7 @@ secret_token: 'xxxxxx'
 # Create a Google Maps API key and enable Javascript and Places libraries
 google_maps_api_key:
 
-# Amazon S3 backups with db2fog
+# Set these if using Amazon S3 backups with db2fog
 s3_backups_bucket:
 s3_access_key:
 s3_secret:
