Switch to using new DJ service

--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -184,7 +184,7 @@
   notify:
     - precompile assets
     - restart unicorn
-    - restart delayed job workers
+    - restart delayed job service
 
 - name: seed database
   # We run a shell script that passes the default email and password to rake with an EOF block, so we don't hang on the prompts.
@@ -208,5 +208,5 @@
     - skip_ansible_lint
   notify:
     - restart unicorn
-    - restart delayed job workers
+    - restart delayed job service
     - update whenever
