--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -24,6 +24,13 @@
   become: yes
   tags: init
 
+- name: Reload systemd
+  systemd:
+    daemon_reload: yes
+  become: yes
+  become_user: root
+  tags: init
+
 - name: Enable delayed_job unit
   service:
     name: "delayed_job_{{ app }}"
