--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -33,13 +33,18 @@
     - libxslt1-dev
     - memcached
     - ranger
-    - monit
     #- fontconfig # needed for phantomjs
     #- nfs-common # make virtualbox faster
   tags: packages
 
-- name: configure monit
-  template:
-    src=monit.j2
-    dest=/etc/monit/conf.d/{{ app }}
+# Remove monit if still installed. The notified handlers will run only once
+# (when the main task triggers a change by removing the config file)
+- name: clean up monit
+  file:
+    state: absent
+    path: /etc/monit/conf.d/{{ app }}
   become: yes
+  become_user: root
+  notify:
+    - stop monit service
+    - remove monit package
