Correct example of Skylight key

--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -36,7 +36,7 @@ stripe_endpoint_secret: # whsec_xxxx
 newrelic_license_key:
 
 # Skylight's API key. This enables performance instrumentation through Skylight. See https://github.com/openfoodfoundation/openfoodnetwork/pull/2070 for details.
-skylight_authentication: xxx
+#skylight_authentication: ""
 
 # Mail settings
 mail_host:
