--- a/site.yml
+++ b/site.yml
@@ -1,4 +1,5 @@
 ---
+- include: playbooks/python.yml
 - include: playbooks/default_user.yml
 - include: playbooks/provision.yml
 - include: playbooks/deploy.yml
