Install bundler only if needed

--- a/roles/bundler/tasks/main.yml
+++ b/roles/bundler/tasks/main.yml
@@ -4,7 +4,8 @@
   # This needs to be run inside a bash shell to initialise rbenv
   # See http://stackoverflow.com/questions/22115936/install-bundler-gem-using-ansible
   command: bash -lc "RBENV_VERSION='{{ ruby_version }}' gem install bundler --no-ri --no-rdoc"
-  tags: skip_ansible_lint
+  args:
+    creates: "~/.rbenv/shims/bundler"
 
 - name: reload rbenv
   command: bash -lc "rbenv rehash"
