Add mail method settings

--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -43,3 +43,7 @@ mail_host:
 mail_port:
 smtp_username:
 smtp_password:
+
+# Optional mail settings
+# mails_from: from_address@example.com
+# mail_bcc: bcc_me@example.com
