--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -9,32 +9,29 @@
   #TODO remove unnecesary packages from this list.
 - name: install base packages
   apt:
-    pkg="{{ item }}"
-    state=present
+    name: "{{ packages }}"
   become: yes
-  with_items:
-    - acl
-    - build-essential
-    - git-core
-    - nodejs
-    - imagemagick
-    - curl
-    - python-pycurl
-    - python-psycopg2 # needed for some ansible libraries
-    - python3-psycopg2
-    - python-software-properties
-    - libpq-dev
-    - tklib
-    - zlib1g-dev
-    - libssl-dev
-    #- libreadline-gplv2-dev
-    - libxml2
-    - libxml2-dev
-    - libxslt1-dev
-    - memcached
-    - ranger
-    #- fontconfig # needed for phantomjs
-    #- nfs-common # make virtualbox faster
+  vars:
+    packages:
+      - acl
+      - build-essential
+      - git-core
+      - nodejs
+      - imagemagick
+      - curl
+      - python-pycurl
+      - python-psycopg2 # needed for some ansible libraries
+      - python3-psycopg2
+      - python-software-properties
+      - libpq-dev
+      - tklib
+      - zlib1g-dev
+      - libssl-dev
+      - libxml2
+      - libxml2-dev
+      - libxslt1-dev
+      - memcached
+      - ranger
   tags: packages
 
 # Remove monit if still installed. The notified handlers will run only once
