Update apt cache only once a day
This should speed up provisioning since we update the apt cache in the
python playbook already.

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -2,7 +2,8 @@
 
 - name: update apt
   apt:
-    update_cache=yes
+    update_cache: yes
+    cache_valid_time: 86400 # seconds = 60*60*24 seconds = 24 hours
   become: yes
   tags: packages
 
