Use `inventory` instead of `hostfile`
Avoids the following warning:

```
[DEPRECATION WARNING]: [defaults]hostfile option, The key is misleading as it can also be a list of hosts, a directory or a list of paths , use [defaults] inventory=/path/to/file|dir instead. This feature will
be removed in version 2.8. Deprecation warnings can be disabled by setting deprecation_warnings=False in ansible.cfg.
```

https://docs.ansible.com/ansible/2.4/intro_configuration.html#hostfile

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 roles_path = ./community:./roles
-hostfile = ./inventory/hosts
+inventory = ./inventory/hosts
 
 callback_whitelist = profile_tasks
 
