Remove superfluous dependencies
`ranger` is a file browser and was probably preferred by a previous admin.
`tklib` is for graphical interfaces. I have no idea why it could be needed.

All tests pass without these. They are not on my dev machine.

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -7,7 +7,6 @@
   become: yes
   tags: packages
 
-  #TODO remove unnecesary packages from this list.
 - name: install base packages
   apt:
     name: "{{ packages }}"
@@ -20,12 +19,13 @@
       - python3-psycopg2
       - python-software-properties
 
-      # unknown why needed
+      # unknown why or if needed
+      # The playbooks run without these dependencies,
+      # but they may be hidden run time dependencies
+      # like imagemagick.
       - acl
       - nodejs
       - curl
-      - tklib
-      - ranger
 
       # build ruby and gems
       - build-essential
