Use new include and import syntax
This will avoid the following warning:

```
[DEPRECATION WARNING]: 'include' for playbook includes. You should use 'import_playbook' instead. This feature will be removed in version 2.8. Deprecation warnings can be disabled by setting
deprecation_warnings=False in ansible.cfg.
```

https://docs.ansible.com/ansible/2.5/modules/include_module.html

--- a/playbooks/rollback.yml
+++ b/playbooks/rollback.yml
@@ -6,8 +6,8 @@
   become_user: "{{ unicorn_user }}"
 
   handlers:
-    - include: ../roles/webserver/handlers/main.yml
-    - include: ../roles/deploy/handlers/main.yml
+    - include_tasks: ../roles/webserver/handlers/main.yml
+    - include_tasks: ../roles/deploy/handlers/main.yml
 
   roles:
     - role: rollback
