--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,5 @@
 ---
-- include: playbooks/python.yml
-- include: playbooks/default_user.yml
-- include: playbooks/provision.yml
-- include: playbooks/deploy.yml
+- import_playbook: playbooks/python.yml
+- import_playbook: playbooks/default_user.yml
+- import_playbook: playbooks/provision.yml
+- import_playbook: playbooks/deploy.yml
