--- a/inventory/group_vars/uk.yml
+++ b/inventory/group_vars/uk.yml
@@ -4,7 +4,7 @@
 checkout_zone: Europe
 country_code: GB
 currency: GBP
-locale: en-GB
+locale: en_GB
 language: en_GB.UTF-8
 language_packages:
   - language-pack-en-base
