Add option to create a swapfile
This can be very useful to avoid running out of memory. It may be that a
server only needs more memory during deployment.

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -33,6 +33,10 @@ security_autoupdate_mail_to: "{{ developer_email }}"
 
 
 #----------------------------------------------------------------------
+# swapfile variables
+swapfile_size: false
+
+#----------------------------------------------------------------------
 # Rails variables
 ruby_version: 2.1.5
 env:
