--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -16,6 +16,10 @@
       become_user: root
       tags: security
 
+    - role: oefenweb.swapfile
+      become: yes
+      tags: swapfile
+
     - role: unicorn_user # Create unprivileged user to run unicorn
       tags: unicorn_user
 
