Only include swapfile role when needed

--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -18,6 +18,7 @@
 
     - role: oefenweb.swapfile
       become: yes
+      when: swapfile_size != false
       tags: swapfile
 
     - role: unicorn_user # Create unprivileged user to run unicorn
