Support mail via TLS

--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -42,5 +42,8 @@ smtp_username:
 smtp_password:
 
 # Optional mail settings
+## Connection type 'TLS' means STARTTLS usually on port 587
+## Connection type 'SSL' means SSL/TLS usually on port 465
+# mail_secure_connection: 'TLS'
 # mails_from: from_address@example.com
 # mail_bcc: bcc_me@example.com
