Added correct domain name (.org not .fr) to the config of fr_staging server

--- a/inventory/host_vars/staging.openfoodfrance.org/config.yml
+++ b/inventory/host_vars/staging.openfoodfrance.org/config.yml
@@ -1,6 +1,6 @@
 ---
 
-domain: staging.openfoodfrance.fr
+domain: staging.openfoodfrance.org
 rails_env: staging
 
 admin_email: admin@openfoodfrance.org
