Redirect to https but keeping the subdomain
Using $server_name when browsing http://appstaging.katuma.org it
redirects to https://staging.katuma.org. In production that would mean
we still showing alpha.katuma.org and that is what we want to avoid.

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -129,7 +129,7 @@ nginx_sites:
       }
 
       location / {
-        return 301 https://$server_name$request_uri;
+        return 301 https://$host$request_uri;
       }
 
   ofn_443:
