Update Belgium details

--- a/inventory/group_vars/be.yml
+++ b/inventory/group_vars/be.yml
@@ -5,6 +5,7 @@ checkout_zone: Europe
 country_code: BE
 currency: EUR
 locale: fr
+available_locales: fr,de,en
 language: en_US.UTF-8
 language_packages:
   - language-pack-en-base
