Install swap file on US server
Asset compilation failed, probably because it ran out of memory.

--- a/inventory/host_vars/openfoodnetwork.net/config.yml
+++ b/inventory/host_vars/openfoodnetwork.net/config.yml
@@ -17,4 +17,4 @@ mail_domain: openfoodnetwork.net
 
 # Size in bytes. You can also use units like 1G, 512MiB or 1000KB. See: `man fallocate`
 # The default is `false`, not installing a swapfile.
-#swapfile_size: 1G
+swapfile_size: 1G
