Optionally set cert name when having subdomains
When specifying multiple domains certbot picks the first one as the
folder name. See the following excerpt from certbot's docs:

> -d DOMAIN, --domains DOMAIN, --domain DOMAIN
  Domain names to apply. For multiple domains you can use multiple -d
  flags or enter a comma separated list of domains as a parameter. The
  first domain provided will be the subject CN of the certificate, and all
  domains will be Subject Alternative Names on the certificate.  The first
  domain will also be used in some software user interfaces and as the
  file paths for the certificate and related material unless otherwise
  specified or you already have a certificate with the same name.  In the
  case of a name collision it will append a number like 0001 to the file
  path name.

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -139,8 +139,8 @@ nginx_sites:
       server_name {{ server_name | default(domain) }};
       root {{ app_root }}/public;
 
-      ssl_certificate      /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
-      ssl_certificate_key  /etc/letsencrypt/live/{{ domain }}/privkey.pem;
+      ssl_certificate      /etc/letsencrypt/live/{{ certbot_cert_name | default(domain) }}/fullchain.pem;
+      ssl_certificate_key  /etc/letsencrypt/live/{{ certbot_cert_name | default(domain) }}/privkey.pem;
 
       add_header X-Content-Type-Options nosniff always;
       add_header X-Xss-Protection "1; mode=block" always;
