--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -61,7 +61,9 @@
       vars:
         domain_name: "{{ certbot_domains | default([domain]) | join(',') }}"
         letsencrypt_email: "{{ developer_email }}"
+        certbot_nginx_cert_name: "{{ certbot_cert_name | default(None) }}"
       when: inventory_hostname != "local_vagrant"
+      tags: certbot
 
     - role: jdauphant.nginx
       become: yes
