Install datadog agent in provisioning
This uses https://github.com/DataDog/ansible-datadog to install the
agent with the provided `datadog_api_key`. Note this variable needs to
specified in the secrets file for the agent to work.

--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -69,3 +69,10 @@
 
     - role: webserver # Build the unicorn webserver.
       tags: webserver
+
+    - role: Datadog.datadog
+      become: yes
+      vars:
+        datadog_api_key: "{{ datadog_key }}"
+      when: datadog_key is defined
+      tags: datadog
