Doc key needed in secrets for Datadog

--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -47,3 +47,9 @@ smtp_password:
 # mail_secure_connection: 'TLS'
 # mails_from: from_address@example.com
 # mail_bcc: bcc_me@example.com
+
+# Datadog monitoring. See
+# https://github.com/openfoodfoundation/ofn-install/issues/287 for details.
+# Note we have a single OFN account where all servers send their metrics to.
+#
+# datadog_key: 'API_key_for_the_OFN_account'
