Enable git module to also fetch pull requests directly from main repo
This uses Semaphore's preferred naming format eg: "origin pull-request-3051" https://semaphoreci.com/docs/available-environment-variables.html#variables-exported-in-builds-and-deploys

--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -22,12 +22,13 @@
     state=absent
   tags: clone
 
-- name: build codebase from git repo
+- name: build codebase from git branch
   git:
-    repo={{ git_repo }}
-    dest={{ build_path }}
-    version="{{ git_version }}"
-    force=yes
+    repo: "{{ git_repo }}"
+    dest: "{{ build_path }}"
+    version: "{{ git_version }}"
+    refspec: "+refs/pull/*/head:refs/remotes/origin/pull-request-*"
+    force: yes
   tags: clone
 
 - name: detach head for git push deployment
