--- a/roles/deploy/handlers/main.yml
+++ b/roles/deploy/handlers/main.yml
@@ -57,3 +57,10 @@
   command: bash -lc "bundle exec whenever --set 'environment={{ rails_env }}' --update-crontab"
   args:
     chdir: "{{ current_path }}"
+
+- name: notify slack
+  slack:
+    token: "T02G54U79/BF25P9F7A/DJdtYaLLUpRJPiu72d8NqgGg"
+    msg: '{{ inventory_hostname }} deployed'
+    channel: "#devops-notifications"
+    username: ansible
