--- a/roles/deploy/handlers/main.yml
+++ b/roles/deploy/handlers/main.yml
@@ -61,6 +61,6 @@
 - name: notify slack
   slack:
     token: "T02G54U79/BF25P9F7A/DJdtYaLLUpRJPiu72d8NqgGg"
-    msg: '{{ inventory_hostname }} deployed'
+    msg: '`{{ git_version }}` deployed to {{ inventory_hostname }}'
     channel: "#devops-notifications"
     username: ansible
