--- a/roles/deploy/handlers/main.yml
+++ b/roles/deploy/handlers/main.yml
@@ -63,4 +63,4 @@
     token: "T02G54U79/BF25P9F7A/DJdtYaLLUpRJPiu72d8NqgGg"
     msg: '`{{ git_version }}` deployed to {{ inventory_hostname }}'
     channel: "#devops-notifications"
-    username: ansible
+    username: "ansible executed by {{ lookup('env','USER') }}"
