Do not serve traffic on alpha.katuma.org anymore
Now that we got app.katuma.org up and running we haven't dropped
alpha.katuma.org but moved to a permanent redirect in
https://github.com/coopdevs/katuma-provisioning/pull/14/.

We will eventually remove it and have app.katuma.org only. Meanwhile,
we can have a bit simpler nginx sites.

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -121,7 +121,7 @@ nginx_sites:
     - |
       listen 80;
       listen [::]:80;
-      server_name {{ server_name | default(domain) }};
+      server_name {{ domain }};
 
       add_header X-Content-Type-Options nosniff always;
       add_header X-Xss-Protection "1; mode=block" always;
@@ -139,7 +139,7 @@ nginx_sites:
     - |
       listen 443 ssl http2;
       listen [::]:443 ssl http2;
-      server_name {{ server_name | default(domain) }};
+      server_name {{ domain }};
       root {{ app_root }}/public;
 
       ssl_certificate      /etc/letsencrypt/live/{{ certbot_cert_name | default(domain) }}/fullchain.pem;
