--- a/inventory/host_vars/app.katuma.org/config.yml
+++ b/inventory/host_vars/app.katuma.org/config.yml
@@ -1,5 +1,5 @@
 ---
-domain: alpha.katuma.org
+domain: app.katuma.org
 rails_env: production
 
 admin_email: info@coopdevs.org
@@ -11,7 +11,5 @@ certbot_domains:
   - alpha.katuma.org
 
 certbot_cert_name: app.katuma.org
-
-server_name: "alpha.katuma.org app.katuma.org"
 
 swapfile_size: 1G
