--- a/roles/semaphore_deployment/tasks/main.yml
+++ b/roles/semaphore_deployment/tasks/main.yml
@@ -44,14 +44,10 @@
     owner: "{{ user }}"
     mode: 0700
 
-- name: check certificate already exists
-  stat:
-    path: "/home/{{ user }}/keys/semaphore.pub"
-  register: semaphore_key
-
 - name: generate semaphore key pair
   command: "ssh-keygen -f /home/{{ user }}/keys/semaphore -t rsa -b 4096 -C semaphore -N '' "
-  when: not semaphore_key.stat.exists
+  args:
+    creates: "/home/{{ user }}/keys/semaphore.pub"
 
 - name: copy public key
   shell: "cat /home/{{ user }}/keys/semaphore.pub"
