Remove all traces of bugsnag initializer
This has been moved to the app's `config/initializers/` instead where it
doesn't need neither templates nor symlink. It's just about providing
the BUGSNAG_API_KEY env var, which is set in both the unicorn service
and `/etc/default/openfoodnetwork`.

--- a/roles/app/tasks/main.yml
+++ b/roles/app/tasks/main.yml
@@ -35,18 +35,10 @@
     - { src: "seed.sh.j2", dest: "{{ config_path }}/seed.sh" }
   tags: app_templates
 
-# Note this requires the `bugsnag_key` var to be specified otherwise no
-# template will be copied
-- name: copy the bugsnag's initializer file into the shared folder
-  template:
-    src: "bugsnag.rb.j2"
-    dest: "{{ config_path }}/bugsnag.rb"
-    owner: "{{ unicorn_user }}"
-    mode: 0775
-  tags:
-    - app_templates
-    - bugsnag
-  when: bugsnag_key is defined
+- name: remove bugsnag's initializer from the shared folder
+  file:
+    path: "{{ config_path }}/bugsnag.rb"
+    state: absent
 
 - name: copy the db2fog file into the shared folder
   template:
