Improve readability around backups bucket variable
Complies to newer ansible-lint versions.

--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -18,9 +18,9 @@ secret_token: 'xxxxxx'
 google_maps_api_key:
 
 # Set these if using Amazon S3 backups with db2fog
-s3_backups_bucket:
-s3_access_key:
-s3_secret:
+#s3_backups_bucket:
+#s3_access_key:
+#s3_secret:
 
 # Stripe Connect API keys
 # Find these under 'API keys' and 'Connect' in your Stripe account dashboard -> Account Settings
