--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   # - pip install dopy
   # - pip install httplib2
   - pip install 'ansible<2.7.0'
-  - pip install ansible-lint
+  - pip install 'ansible-lint==4.1.0'
 
 script:
   - bin/setup
