--- a/inventory/group_vars/ca.yml
+++ b/inventory/group_vars/ca.yml
@@ -5,12 +5,12 @@ checkout_zone: Canada
 country_code: CA
 currency: CAD
 locale: en
-available_locales: en,es    # Available locales for OFN instance
+available_locales: en,fr_CA    # Available locales for OFN instance
 language: en.UTF-8       # Default language for the server
 language_packages:          # Language packages for the server
   - language-pack-en-base
 l10n_repo: https://github.com/openfoodfoundation/l10n_ca.git
-timezone:
+timezone: "Eastern Time (US & Canada)"
 
 
 # Used for the LetsEncrypt email setting
