Add bugsnag key template to example secrets

--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -53,3 +53,8 @@ smtp_password:
 # Note we have a single OFN account where all servers send their metrics to.
 #
 # datadog_key: 'API_key_for_the_OFN_account'
+
+# Bugsnag collects all errors and notifies you.
+# https://github.com/openfoodfoundation/ofn-install/wiki/Issue-reporting
+#
+#bugsnag_key: ''
