Use new shared handler for restarting unicorn in deploy.yml

--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -5,6 +5,9 @@
   become: yes
   become_user: "{{ unicorn_user }}"
 
+  handlers:
+    - include: ../roles/shared_handlers/handlers/main.yml
+
   tasks:
     - block:
       - include_role:
