Use reload instead of restart
See: https://www.freedesktop.org/software/systemd/man/systemd.service.html
and: https://bogomips.org/unicorn.git/tree/SIGNALS

--- a/roles/webserver/handlers/main.yml
+++ b/roles/webserver/handlers/main.yml
@@ -1,5 +1,5 @@
-- name: restart unicorn
+- name: reload unicorn
   service:
     name: unicorn_{{ app }}
-    state: restarted
+    state: reloaded
   become: yes
