Only reload unicorn if service is already running
Otherwise we get an error if the app hasn't been deployed yet (during a fresh install).

--- a/roles/webserver/handlers/main.yml
+++ b/roles/webserver/handlers/main.yml
@@ -1,5 +1,10 @@
 - name: reload unicorn
+  service_facts:
+  notify: reload unicorn if running
+
+- name: reload unicorn if running
   service:
     name: unicorn_{{ app }}
     state: reloaded
   become: yes
+  when: ansible_facts.services['unicorn_openfoodnetwork.service']['state'] == 'running'
