Fix LXC setup to use with development.yml playbook
Fixes the setup process of an LXC development environment using
playbooks/development.yml.

It relies on https://github.com/coopdevs/devenv to create the LXC
container. As it has some personal specifics I can't commit the
necessary `.devenv` file but the following can serve as an example

```
NAME="ofn"
DISTRIBUTION="ubuntu"
RELEASE="xenial"
ARCH="amd64"
HOST="ofn.local"

DEVENV_USER="openfoodnetwork"
DEVENV_GROUP="openfoodnetwork"

PROJECT_NAME="openfoodnetwork"
PROJECT_PATH="/home/pau/dev/openfoodnetwork"

PYTHON_INTERPRETER=python3
```

This is the one I used. After having the container up and running,
running the following you'll have it ready.

```
ansible-playbook playbooks/setup.yml playbooks/development.yml --limit=lxc
```

There are a number of improvements that can be made but this is a good
foundation to get up to speed.

--- a/playbooks/development.yml
+++ b/playbooks/development.yml
@@ -1,4 +1,12 @@
 ---
+# Note that by relying on this playbook you will end up with a development
+# environment that uses some of roles we use for live instances. You won't have
+# Nginx nor unicorn so will have to manually start the rails running `bundle
+# exec rails server`.
+#
+# Also, there are a number of things you will need to do manually such as
+# installing bundler and creating the development database with `bundle exec
+# rake db:create` as you would do on your host without containers.
 - name: provision
   hosts: ofn_servers
   remote_user: "{{ user }}"
@@ -27,7 +35,6 @@
     - role: dbserver # Set up database server and user for the app.
       tags: dbserver
       db_user_roles: SUPERUSER,CREATEDB
-      db_user: ofn
 
   vars:
     ansible_python_interpreter: /usr/bin/python2.7
