Refactor postgres encoding hack into a reusable role and define a configurable variable for postgres encoding

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -54,7 +54,7 @@ db: openfoodnetwork
 test_db: ofn_test
 db_user: ofn_user
 db_host: localhost
-
+postgres_encoding: en_US.utf8
 
 #----------------------------------------------------------------------
 # App variables
