Check presence of secrets first to avoid accidents!

--- a/playbooks/integrations.yml
+++ b/playbooks/integrations.yml
@@ -11,6 +11,10 @@
   handlers:
     - include: geerlingguy.postgresql/handlers/main.yml
 
+  pre_tasks:
+    - include_role:
+        name: check_secrets
+
   tasks:
     - name: Gather postgres info
       include_role:
