Rename role to db_integrations for clarity

--- a/playbooks/db_integrations.yml
+++ b/playbooks/db_integrations.yml
@@ -23,7 +23,7 @@
 
     - name: Apply integrations settings
       include_role:
-        name: integrations
+        name: db_integrations
       vars:
         db_integration: "{{ integration_item }}"
       loop: "{{ db_integrations }}"
